# fastapi-order-service

./: .env.example  .gitignore  README.md  docker-compose.yml  etl_runner.sh  pyproject.toml  queries.sql
db/: models.py  schema.sql  seed.sql  session.py
service/: Dockerfile  main.py  requirements.txt
service/db/: analytics.sql  schema.sql  session.py
service/routes/: category_router.py  client_router.py  inventory_router.py  order_router.py  product_router.py
service/schemas/: category.py  client.py  inventory.py  order.py  product.py
service/tests/: conftest.py  test_orders.py
